--- a/index.html
+++ b/index.html
@@ -140,9 +140,12 @@ http://www.tooplate.com/view/2088-big-city
 
                                         </div> 
                                         <div class="col-lg-4 tm-margin-b">
+													        <div class="space-center">
+
                                             <div class="tm-bg-dark-blue-box tm-white-border tm-textbox-padding tm-height-100">
                                                 <h2 class="skills">JS<br> 74%</h2>
-                                            </div>
+                                            </div>                                            </div>
+
                                         </div>
                                         <div class="col-lg-4 tm-sm-margin-b">
 									        <div class="space-left">
@@ -168,9 +171,12 @@ http://www.tooplate.com/view/2088-big-city
 
                                         </div> 
                                         <div class="col-lg-4 tm-sm-margin-b">
+																							        <div class="space-center">
+
                                             <div class="tm-bg-dark-blue-box tm-white-border tm-textbox-padding tm-height-100">
                                                 <h2 class="skills">HTML 88%</h2>
-                                            </div>    
+                                            </div>                                                </div>    
+
                                         </div>
                                         <div class="col-lg-4 tm-sm-margin-b">
 									        <div class="space-left">
